--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
+    "@sanity/image-url": "^1.0.2",
     "next": "13.5.4",
+    "next-sanity": "^5.5.8",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
